--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -14,20 +14,24 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "All Articles", articles_path %></li>
+      <% if params[:slug] %>
+        <li><%= link_to "All Articles", tenant_articles_path(slug: params[:slug]) %></li>
         <% if current_author %>
           <li><%= link_to "Dashboard", dashboard_path %></li>
           <li><%= link_to "Create Article", new_article_path %></li>
         <% end %>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <% if current_author %>
-          <li><%= link_to "Account", account_path %></li>
-          <li><%= link_to "Log Out", logout_path %></li>
-        <% else %>
-          <li><%= link_to "Log In", login_path %></li>
         <% end %>
       </ul>
+      <% if params[:slug] %>
+      <ul class="nav navbar-nav navbar-right">
+          <% if current_author %>
+            <li><%= link_to "Account", account_path %></li>
+            <li><%= link_to "Log Out", logout_path %></li>
+          <% else %>
+            <li><%= link_to "Log In", login_path %></li>
+          <% end %>
+        </ul>
+      <% end %>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
