--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
       <% if params[:slug] %>
-        <li><%= link_to "All Articles", tenant_articles_path(slug: params[:slug]) %></li>
+        <li><%= link_to "#{params[:slug].humanize}", tenant_articles_path(slug: params[:slug]) %></li>
         <% if current_author %>
           <li><%= link_to "Dashboard", dashboard_path %></li>
           <li><%= link_to "Create Article", new_article_path %></li>
@@ -28,7 +28,7 @@
             <li><%= link_to "Account", account_path %></li>
             <li><%= link_to "Log Out", logout_path %></li>
           <% else %>
-            <li><%= link_to "Log In", login_path %></li>
+            <li><%= link_to "Log In", tenant_login_path(slug: params[:slug]) %></li>
           <% end %>
         </ul>
       <% end %>
