--- a/app/views/tenants/articles/index.html.erb
+++ b/app/views/tenants/articles/index.html.erb
@@ -2,12 +2,9 @@
 
 <hr>
 
-<div id="sidebar">
-  Filter by Tag: <%= tag_links(Tag.all) %>
-</div>
 
 <% @articles.each do |article| %>
-  <h3><%= link_to article.title, article_path(article) %></h3>
+  <h3><%= link_to article.title, tenant_article_path(slug: params[:slug], id: article.id) %></h3>
 
   <h5><%= format_date(article.created_at) %></h5>
 
